  a "-" were incorrectly turned into bogus IP range searches.
  Patch by Max Semenik.
* (bug 15055) Talk page notifications no longer attempt to send mail when
  user's e-mail address is invalid or unconfirmed
* (bug 2443) Add image name as alt-text when no caption is provided.
* (bug 12370) Add throttle on password attempts. Defaults to max 5 attempts in 5 minutes.

=== API changes in 1.14 ===

* Registration time of users registered before the DB field was created is now
  shown as empty instead of the current time.
* API search now falls back to fulltext search by default when using Lucene
  or other engine which doesn't support a separate title search function.
  This means you can use API search on Wikipedia without explicitly adding
  &srwhat=text to the query.
* Added iiprop=bitdepth to imageinfo and aiprop=bitdepth to allimages
* (bug 14713) API-specific permissions (such as 'writeapi' and 'apihighlimits'
  are now listed on action=help
* (bug 15044) Added requestid parameter to api.php to facilitate distinguishing
  between requests
* (bug 15048) Added limit field for multivalue parameters to action=paraminfo
  output.
* When the limit on multivalue parameters is exceeded, a warning is issued 

=== Languages updated in 1.14 ===

MediaWiki supports over 300 languages. Many localisations are updated
regularly. Below only new and removed languages are listed.

(no changes yet)

== Compatibility ==

MediaWiki 1.14 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

If upgrading from before 1.11, and you are using a wiki as a commons repository,
make sure that it is updated as well. Otherwise, errors may arise due to